[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/player/fireball-shotLoop-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes_and_Hurtboxes/hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitboxes_and_Hurtboxes/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/player_fireball.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "shot",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 22.0
height = 28.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 14.0
height = 20.0

[node name="player_fireball" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 4, 4 )
frames = SubResource( 5 )
animation = "shot"
frame = 3
playing = true

[node name="hitbox_pivot" type="Position2D" parent="."]

[node name="hitbox" parent="hitbox_pivot" instance=ExtResource( 2 )]
rotation = 1.5708
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="hitbox_pivot/hitbox" index="0"]
position = Vector2( 0, 15 )
shape = SubResource( 6 )

[node name="hurtbox_pivot" type="Position2D" parent="."]

[node name="hurtbox" parent="hurtbox_pivot" instance=ExtResource( 3 )]
collision_layer = 0

[node name="CollisionShape2D" parent="hurtbox_pivot/hurtbox" index="0"]
position = Vector2( -11, 0 )
rotation = 1.5708
shape = SubResource( 7 )

[connection signal="body_entered" from="hurtbox_pivot/hurtbox" to="." method="_on_hurtbox_body_entered"]

[editable path="hitbox_pivot/hitbox"]
[editable path="hurtbox_pivot/hurtbox"]
